Works but child nodes aren't transformed yet

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.6.1"
+    "@nuxt/kit": "^3.6.1",
+    "ufo": "^1.1.2"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
